--- a/scss/about-section.scss
+++ b/scss/about-section.scss
@@ -5,7 +5,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     padding-top: 70px;
-    padding-bottom: 70px;
+    padding-bottom: 70px; 
     padding-right: 50px;
     padding-left: 50px;
     &__fg-big-box {
@@ -33,7 +33,7 @@
     &__details-h-two {
         color: #ffffff;
         font-family: 'ralewaybold';
-        font-size: 90px;
+        font-size: 2rem;
         margin-bottom: 5px;
         text-align: left;
     }
@@ -42,7 +42,7 @@
         font-family: 'ralewaylight';
         text-align: left;
         line-height: 25px;
-        font-size: 17px;
+        font-size: 15px;
     }
 }
 // Media Queries
@@ -54,17 +54,18 @@
         padding-right: 50px;
         padding-left: 50px;
         &__div-for-image {
-            width: 50%;
-            height: auto;
-            margin: 0 18%;
+            width: 25%;
+            height: 20%;
+            margin: 3% 30%;
             position: absolute;
             opacity: .5;
         }
         &__img-fruits {
             width: 100%;
-            height: 100%;
+            height: auto;
         }
         &__details {
+            display: relative;
             margin: 0;
             padding: 0;
             z-index: 1;
@@ -101,7 +102,7 @@
             width: 25%;
             margin-top: 0;
             margin-right: 30px;
-            margin-left: 151px;
+            margin-left: 100px;
         }
         &__img-fruits {
             width: 100%;
