--- a/scss/blog-section.scss
+++ b/scss/blog-section.scss
@@ -6,7 +6,7 @@
     padding-right: 50px;
     padding-left: 50px;
     &__details {
-        width: 600px;
+        width: 100%;
         margin: 0 auto;
     }
     &__details-title {
@@ -81,7 +81,6 @@
     &__h-two {
         color: #ffffff;
         font-family: 'ralewaybold';
-        font-weight: bold;
         font-size: 20px;
         top: 60%;
         left: 5%;
@@ -91,7 +90,6 @@
     &__paragraph {
         color: #ffffff;
         font-family: 'ralewaylight';
-        font-weight: light;
         font-size: 13px;
         top: 85%;
         left: 6%;
@@ -101,7 +99,7 @@
     &__div-for-button {
         width: 199px;
         height: 56px;
-        padding-top: 53px;
+        padding-top: 25px;
         padding-bottom: 100px;
         margin: 0 auto;
     }
@@ -124,17 +122,71 @@
         }
     }
 }
-
 // Media Queries
 // tablets
 @media screen and (max-width: 768px) {
-  .blog-section {
-    &__flex-boxes {
-        width: 55%;
-        
+    .blog-section {
+        &__flex-boxes {
+            width: 55%;
+        }
     }
-  } 
 }
 // mobiles
-@media screen and (max-width: 480px) {}
-
+@media screen and (max-width: 480px) {
+    .blog-section {
+        padding-top: 50px;
+        padding-bottom: 50px;
+        padding-right: 15px;
+        padding-left: 15px;
+        &__details-title {
+            font-size: 2rem;
+            margin-top: 0;
+            margin-bottom: 0;
+            text-align: center;
+        }
+        &__details-text {
+            font-size: 15px;
+            text-align: center;
+            margin-bottom: 0;
+        }
+        &__flex-container {
+            margin-top: 25px;
+        }
+        &__flex-boxes {
+            width: 100%;
+            position: relative;
+            margin: 0;
+            margin-top: 15px;
+            margin-bottom: 15px;        }
+        &__h-two {
+            color: #ffffff;
+            font-family: 'ralewaybold';
+            font-size: 15px;
+            top: 70%;
+            left: 5%;
+            z-index: 1;
+            position: absolute;
+        }
+        &__paragraph {
+            color: #ffffff;
+            font-family: 'ralewaylight';
+            font-size: 13px;
+            top: 85%;
+            left: 6%;
+            position: absolute;
+            z-index: 1;
+        }
+        &__div-for-button {
+            width: 130px;
+            height: 50px;
+            margin: 0 auto;
+            margin-top: 20px;
+            padding: 0;
+        }
+        &__button {
+            width: 130px;
+            height: 50px;
+            font-size: 15px;
+        }
+    }
+}
