--- a/scss/contact-section.scss
+++ b/scss/contact-section.scss
@@ -4,6 +4,8 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    padding-right: 50px;
+    padding-left: 50px;
     &__fg-big-box {
         display: flex;
         width: 100%;
@@ -139,30 +141,79 @@
         margin-bottom: 5px;
     }
 }
-
 // Media Queries
 // tablets
 @media screen and (max-width: 768px) {
     .contact-section {
-       &__fg-big-box {
-        display: flex;
-        width: 100%;
-    }
-     &__info {
-        width: 45%;
-        margin-top: 50px;
-        padding-top: 0;
-        margin-left: 50px;
-        margin-right: 10px;
-    }
-     &__form {
-        width: 50%;
-        margin-top: 50px;
-        margin-bottom: 100px;
-        margin-left: 10px;
-        margin-right: 50px;
-    }
+        &__fg-big-box {
+            display: flex;
+            width: 100%;
+        }
+        &__info {
+            width: 45%;
+            margin-top: 50px;
+            padding-top: 0;
+            margin-left: 50px;
+            margin-right: 10px;
+        }
+        &__form {
+            width: 50%;
+            margin-top: 50px;
+            margin-bottom: 100px;
+            margin-left: 10px;
+            margin-right: 50px;
+        }
     }
 }
 // mobiles
-@media screen and (max-width: 480px) {}
+@media screen and (max-width: 480px) {
+    .contact-section {
+        padding-right: 15px;
+        padding-left: 15px;
+        &__fg-big-box {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+        &__details-title {
+            font-size: 2rem;
+            padding-top: 30px;
+        }
+        &__details-text {
+            width: 100%;
+            font-size: 15px;
+        }
+         &__form {
+        width: 100%;
+        margin: 0;
+        margin-top: 10px;
+    }
+    &__name-input {
+        width: 100%;
+        height: 50px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    &__info {
+        width: 100%;
+        margin: 0 auto;
+        padding-top: 0;
+    }
+    &__info-titles {
+        width: 100%;
+        font-size: 15px;
+        text-align: center;
+        margin-top: 15px;
+        margin-bottom: 5px;
+    }
+    &__info-text {   
+    width: 100%;     
+        font-size: 15px;
+        text-align: center;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    }
+}
