--- a/scss/footer-section.scss
+++ b/scss/footer-section.scss
@@ -2,65 +2,110 @@
     width: 100%;
     background-color: #262626;
     &__flex-container {
-    	display: flex;
-    	justify-content: space-between;	
+        display: flex;
+        justify-content: space-between;
     }
     &__flex-container-copyright {
-    	width: 40%;
-    	height: 45px;
+        width: 40%;
+        height: 45px;
         text-align: center;
     }
     &__flex-container-logo {
-    	width: 5.5%;
-    	height: auto;
+        width: 5.5%;
+        height: auto;
     }
     &__flex-container-madewithlove {
-    	width: 35%;
-    	height: 45px;
+        width: 35%;
+        height: 45px;
         text-align: center;
     }
     &__paragraph {
-    	color: #4d4d4d;
+        color: #4d4d4d;
         font-family: 'ralewaylight';
-    	font-size: 16px;
+        font-size: 16px;
     }
     &__text {
-       color: #4d4d4d;
-       font-family: 'ralewaylight';
-       font-size: 16px;
+        color: #4d4d4d;
+        font-family: 'ralewaylight';
+        font-size: 16px;
     }
     &__img {
-    	width: 100%;
+        width: 100%;
         height: auto;
-    	margin-top: 15px;
+        margin-top: 15px;
     }
     &__span {
-    	color: #ff2b58;
-    	font-family: sans-serif;
-    	font-size: 16px;	
+        color: #ff2b58;
+        font-family: 'ralewaylight';
+        font-size: 16px;
     }
 }
-
 // Media Queries
 // tablets
 @media screen and (max-width: 768px) {
     .footer-section {
-       &__paragraph {
-        color: #ffffff;
-        font-family: 'ralewaylight';
-        font-size: 17px;
-    }
-    &__text {
-       color: #ffffff;
-       font-family: 'ralewaylight';
-       font-size: 17px;
-    }
-    &__span {
-        color: #ff2b58;
-        font-family: sans-serif;
-        font-size: 17px;    
-    } 
+        &__paragraph {
+            color: #ffffff;
+            font-family: 'ralewaylight';
+            font-size: 17px;
+        }
+        &__text {
+            color: #ffffff;
+            font-family: 'ralewaylight';
+            font-size: 17px;
+        }
+        &__span {
+            color: #ff2b58;
+            font-family: 'ralewaylight';
+            font-size: 17px;
+        }
     }
 }
 // mobiles
-@media screen and (max-width: 480px) {}
+@media screen and (max-width: 480px) {
+    .footer-section {
+        width: 100%;
+        background-color: #262626;
+        &__flex-container {
+            display: flex;
+            width: 100%;
+            flex-direction: column;
+            justify-content: center;
+            align-content: center;
+        }
+        &__flex-container-copyright {
+            width: 100%;
+            height: auto;
+            order: 3;
+            text-align: center;
+        }
+        &__flex-container-logo {
+            width: 100%;
+            height: auto;
+            order: 1;
+            text-align: center;
+        }
+        &__flex-container-madewithlove {
+            width: 100%;
+            height: auto;
+            order: 2;
+            text-align: center;
+        }
+        &__paragraph {
+            font-size: 15px;
+            margin: 5px;
+        }
+        &__text {
+            font-size: 15px;
+             margin: 5px;
+        }
+        &__img {
+            width: 70px;
+            height: auto;
+            margin-top: 15px;
+        }
+        &__span {
+            font-size: 15px;
+        }
+    }
+}
