--- a/scss/subscribe-section.scss
+++ b/scss/subscribe-section.scss
@@ -66,16 +66,52 @@
 // Media Queries
 // tablets
 @media screen and (max-width: 768px) {
-   .subscribe-section {
-    &__submit-input {
-       margin-top: 15px; 
-       display: block;
+    .subscribe-section {
+        &__submit-input {
+            margin-top: 25px;
+            display: block;
+        }
     }
-   } 
 }
 // mobiles
 @media screen and (max-width: 480px) {
-   .subscribe-section {
-    
-   } 
+    .subscribe-section {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-right: 15px;
+        padding-left: 15px;
+        &__ditails {
+            width: 100%;
+            height: auto;
+            margin: 0;
+            margin-top: 25px;
+        }
+        &__ditails-h-two {
+            font-size: 2rem;
+            text-align: center;
+            margin: 0;
+            margin-bottom: 17px;
+        }
+        &__ditails-paragraph {
+            font-size: 15px;
+            text-align: center;
+            margin-top: 17px;
+        }
+        &__form {
+        margin-top: 25px;
+        margin-bottom: 17px;
+    }
+        &__email-input {
+            width: 100%;
+            padding-left: 15px;
+            margin-right: 15px;
+        }
+        &__submit-input {
+            width: 130px;
+            height: 50px;
+            font-size: 15px;
+            margin-top: 25px;
+            margin-bottom: 30px;
+        }
+    }
 }
